# Django_Sticky_notes_python

./: .gitignore  readme.md
sticky_notes/: .pypirc  db.sqlite3  pyproject.toml  setup.cfg  setup.py
sticky_notes/Test/: test_suite.py  unit_test.py
sticky_notes/sticky_notes/: settings.py
sticky_notes/sticky_notes_app/: forms.py  urls.py  views.py
sticky_notes/sticky_notes_app/templates/: base.html  login.html  notes_detail.html  register.html
