# describe this project
[project]
name = 'sticky_notes'
version = '0.0.1'
authors = "Ore Akin-Odidi <oreakinodidi@microsoft.com>"
description = 'A simple sticky notes application made using django'
readme = "README.md"
requires-python = ">=3.8"
classifiers = "Programming Language :: Python :: 3, License :: OSI Approved :: MIT License, Operating System :: OS Independent"
[project.urls]
Homepage = "https://github.com/oreakinodidi98/Django_Sticky_notes_python"